3/assets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
  namespace: demo-acm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: quay.io/apoczeka/app-info:latest
        name: app1
        ports:
        - containerPort: 8080
