3/assets/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app1
  name: app1
  namespace: demo-acm
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app1
  sessionAffinity: None
  type: ClusterIP
